<resources>
    <string name="app_name">Candy Suharnica</string>
    <string name="search_in_the_basket">Поиск по корзине…</string>
    <string name="search_in_the_catalog">Поиск по каталогу…</string>
    <string name="catalog">каталог</string>
    <string name="basket">корзина</string>
    <string name="profile">профиль</string>
    <string name="make_an_order">Оформить заказ</string>
    <string name="profile_title">Личный кабинет</string>
    <string name="full_name_profile_example">Фамилия Имя</string>
    <string name="phone_number_profile_example">+375(XX)-XXX-XX-XX</string>
    <string name="address_profile_example">ул. Example, д xx</string>
    <string name="bank_card_number_profile">Действующая \nкарта</string>
    <string name="speakable_text_edit">Edit</string>
    <string name="my_orders_profile">Мои заказы</string>
    <string name="amount_example_xx">X</string>
    <string name="price_example_xx_xx">XX.XX BYN</string>
    <string name="sign_up">Регистрация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password">Пароль</string>
    <string name="already_in_suharnica">Есть аккаунт? Войти</string>
    <string name="logo_image">logo image</string>
    <string name="name">Имя и фамилия</string>
    <string name="mail">Почта</string>
    <string name="log_in">Войти</string>
    <string name="new_to_sycharnica_sing_up">Нет аккаунта? Зарегестрироваться</string>
    <string name="sing_inn">Вход</string>
    <string name="delivery_text">Ближайшая доставка через</string>
    <string name="delivery_time">x часов</string>
    <string name="favorites_desserts">Мои любимые десерты</string>
</resources>