<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.logInAndSignUp.SignUpFragment">

    <ImageView
        android:id="@+id/iv_logo_sign_up_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loading_screen_logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_sign_up_fragment"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/stroke_width_dimen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_special_margin_dimen"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="26sp"
                android:text="@string/sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/golos_text_regular"
                android:hint="@string/name"
                android:layout_marginStart="@dimen/layout_margin_dimen"
                android:layout_marginEnd="@dimen/layout_margin_dimen"
                android:layout_marginTop="@dimen/layout_margin_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_up">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/golos_text_regular"
                android:hint="@string/mail"
                android:layout_marginStart="@dimen/layout_margin_dimen"
                android:layout_marginEnd="@dimen/layout_margin_dimen"
                android:layout_marginTop="@dimen/layout_margin_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/golos_text_regular"
                android:hint="@string/password"
                android:layout_marginStart="@dimen/layout_margin_dimen"
                android:layout_marginEnd="@dimen/layout_margin_dimen"
                android:layout_marginTop="@dimen/layout_margin_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_repeat_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/golos_text_regular"
                android:hint="@string/repeat_password"

                android:layout_marginStart="@dimen/layout_margin_dimen"
                android:layout_marginEnd="@dimen/layout_margin_dimen"
                android:layout_marginTop="@dimen/layout_margin_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_repeat_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:id="@+id/b_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#D4FF00"
                android:fontFamily="@font/golos_text_demibold"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_repeat_password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/clickable_tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/already_in_suharnica"
        android:textColor="#16486A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>