<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    app:strokeColor="@color/black"
    app:strokeWidth="@dimen/stroke_width_dimen"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_product_icon_basket_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:id="@+id/viewLine3"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintStart_toEndOf="@id/iv_product_icon_basket_item"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_title_basket_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/golos_text_demibold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/iv_product_icon_basket_item"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_price_basket_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/price_example_xx_xx"
            app:layout_constraintStart_toEndOf="@+id/iv_product_icon_basket_item"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_title_basket_item" />

        <LinearLayout
            android:id="@+id/ll_item_basket_buttons_and_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_recycle_bin_basket_item">


            <ImageButton
                android:id="@+id/ib_minus_basket_item"
                style="@android:style/Widget.Holo.Light.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:srcCompat="@drawable/big_minus_icon"
                android:background="@color/black"/>
            <View
                android:id="@+id/viewLine2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                />
            <TextView
                android:id="@+id/tv_amount_of_product_basket_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/golos_text_demibold"
                android:text="@string/amount_example_xx"
                android:paddingLeft="1.5dp"
                android:paddingRight="1.5dp"
                android:textColor="@color/black" />
            <View
                android:id="@+id/viewLine1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                />

            <ImageButton
                android:id="@+id/ib_plus_basket_item"
                style="@android:style/Widget.Holo.Light.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:srcCompat="@drawable/big_plus_icon"
                android:background="@color/black"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/ib_recycle_bin_basket_item"
            style="@android:style/Widget.Holo.Light.ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/recycle_bin_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>